[ktdung] fix review